--- a/views/listPatients.hbs
+++ b/views/listPatients.hbs
@@ -5,21 +5,20 @@
     <div class="d-flex align-items-center justify-content-between">
         <a href="index.html" class="logo d-flex align-items-center">
             <img src="assets/img/logo.png" alt="">
-            <span class="d-none d-lg-block">NiceAdmin</span>
+            <span class="d-none d-lg-block">Hệ thống quản trị</span>
         </a>
         <i class="bi bi-list toggle-sidebar-btn"></i>
     </div><!-- End Logo -->
 
     <div class="search-bar">
-        <form class="search-form d-flex align-items-center" method="POST" action="#">
-            <input type="text" name="query" placeholder="Search" title="Enter search keyword">
+        <form class="search-form d-flex align-items-center" method="POST" action="/dashboard">
+            <input type="text" name="query" placeholder="Tìm kiếm" title="Enter search keyword">
             <button type="submit" title="Search"><i class="bi bi-search"></i></button>
         </form>
     </div><!-- End Search Bar -->
 
     <nav class="header-nav ms-auto">
         <ul class="d-flex align-items-center">
-
             <li class="nav-item d-block d-lg-none">
                 <a class="nav-link nav-icon search-bar-toggle " href="#">
                     <i class="bi bi-search"></i>
@@ -167,61 +166,61 @@
 
             </li><!-- End Messages Nav -->
 
-            <li class="nav-item dropdown pe-3">
+            <!--            <li class="nav-item dropdown pe-3">-->
 
-                <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
-                    <img src="assets/img/profile-img.jpg" alt="Profile" class="rounded-circle">
-                    <span class="d-none d-md-block dropdown-toggle ps-2">K. Anderson</span>
-                </a><!-- End Profile Iamge Icon -->
+            <!--                <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">-->
+            <!--                    <img src="assets/img/profile-img.jpg" alt="Profile" class="rounded-circle">-->
+            <!--                    <span class="d-none d-md-block dropdown-toggle ps-2">K. Anderson</span>-->
+            <!--                </a>&lt;!&ndash; End Profile Iamge Icon &ndash;&gt;-->
 
-                <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
-                    <li class="dropdown-header">
-                        <h6>Kevin Anderson</h6>
-                        <span>Web Designer</span>
-                    </li>
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
+            <!--                <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">-->
+            <!--                    <li class="dropdown-header">-->
+            <!--                        <h6>Kevin Anderson</h6>-->
+            <!--                        <span>Web Designer</span>-->
+            <!--                    </li>-->
+            <!--                    <li>-->
+            <!--                        <hr class="dropdown-divider">-->
+            <!--                    </li>-->
 
-                    <li>
-                        <a class="dropdown-item d-flex align-items-center" href="users-profile.html">
-                            <i class="bi bi-person"></i>
-                            <span>My Profile</span>
-                        </a>
-                    </li>
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
+            <!--                    <li>-->
+            <!--                        <a class="dropdown-item d-flex align-items-center" href="users-profile.html">-->
+            <!--                            <i class="bi bi-person"></i>-->
+            <!--                            <span>My Profile</span>-->
+            <!--                        </a>-->
+            <!--                    </li>-->
+            <!--                    <li>-->
+            <!--                        <hr class="dropdown-divider">-->
+            <!--                    </li>-->
 
-                    <li>
-                        <a class="dropdown-item d-flex align-items-center" href="users-profile.html">
-                            <i class="bi bi-gear"></i>
-                            <span>Account Settings</span>
-                        </a>
-                    </li>
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
+            <!--                    <li>-->
+            <!--                        <a class="dropdown-item d-flex align-items-center" href="users-profile.html">-->
+            <!--                            <i class="bi bi-gear"></i>-->
+            <!--                            <span>Account Settings</span>-->
+            <!--                        </a>-->
+            <!--                    </li>-->
+            <!--                    <li>-->
+            <!--                        <hr class="dropdown-divider">-->
+            <!--                    </li>-->
 
-                    <li>
-                        <a class="dropdown-item d-flex align-items-center" href="pages-faq.html">
-                            <i class="bi bi-question-circle"></i>
-                            <span>Need Help?</span>
-                        </a>
-                    </li>
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
+            <!--                    <li>-->
+            <!--                        <a class="dropdown-item d-flex align-items-center" href="pages-faq.html">-->
+            <!--                            <i class="bi bi-question-circle"></i>-->
+            <!--                            <span>Need Help?</span>-->
+            <!--                        </a>-->
+            <!--                    </li>-->
+            <!--                    <li>-->
+            <!--                        <hr class="dropdown-divider">-->
+            <!--                    </li>-->
 
-                    <li>
-                        <a class="dropdown-item d-flex align-items-center" href="#">
-                            <i class="bi bi-box-arrow-right"></i>
-                            <span>Sign Out</span>
-                        </a>
-                    </li>
+            <!--                    <li>-->
+            <!--                        <a class="dropdown-item d-flex align-items-center" href="#">-->
+            <!--                            <i class="bi bi-box-arrow-right"></i>-->
+            <!--                            <span>Sign Out</span>-->
+            <!--                        </a>-->
+            <!--                    </li>-->
 
-                </ul><!-- End Profile Dropdown Items -->
-            </li><!-- End Profile Nav -->
+            <!--                </ul>&lt;!&ndash; End Profile Dropdown Items &ndash;&gt;-->
+            <!--            </li>&lt;!&ndash; End Profile Nav &ndash;&gt;-->
 
         </ul>
     </nav><!-- End Icons Navigation -->
@@ -270,7 +269,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="forms-layouts.html">
+                    <a href="/adddoctor">
                         <i class="bi bi-circle"></i><span>Thêm bác sĩ</span>
                     </a>
                 </li>
@@ -291,6 +290,7 @@
             <a class="nav-link collapsed" href="/">
                 <i class="bi bi-question-circle"></i>
                 <span>F.A.Q</span>
+            </a>
             </a>
         </li><!-- End F.A.Q Page Nav -->
 
@@ -313,12 +313,11 @@
 <main id="main" class="main">
 
     <div class="pagetitle">
-        <h1>Data Tables</h1>
+        <h1>Danh sách bệnh nhân</h1>
         <nav>
             <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                <li class="breadcrumb-item">Tables</li>
-                <li class="breadcrumb-item active">Data</li>
+                <li class="breadcrumb-item"><a href="/">Home</a></li>
+                <li class="breadcrumb-item active">Danh sách bệnh nhân</li>
             </ol>
         </nav>
     </div><!-- End Page Title -->
@@ -329,7 +328,7 @@
 
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">Datatables</h5>
+                        <h5 class="card-title">Danh sách bệnh nhân</h5>
                         <!-- Table with stripped rows -->
                         <table class="table datatable">
                             <thead>
