--- a/views/addPatient.hbs
+++ b/views/addPatient.hbs
@@ -3,21 +3,20 @@
     <div class="d-flex align-items-center justify-content-between">
         <a href="index.html" class="logo d-flex align-items-center">
             <img src="assets/img/logo.png" alt="">
-            <span class="d-none d-lg-block">NiceAdmin</span>
+            <span class="d-none d-lg-block">Hệ thống quản trị</span>
         </a>
         <i class="bi bi-list toggle-sidebar-btn"></i>
     </div><!-- End Logo -->
 
     <div class="search-bar">
-        <form class="search-form d-flex align-items-center" method="POST" action="#">
-            <input type="text" name="query" placeholder="Search" title="Enter search keyword">
+        <form class="search-form d-flex align-items-center" method="POST" action="/dashboard">
+            <input type="text" name="query" placeholder="Tìm kiếm" title="Enter search keyword">
             <button type="submit" title="Search"><i class="bi bi-search"></i></button>
         </form>
     </div><!-- End Search Bar -->
 
     <nav class="header-nav ms-auto">
         <ul class="d-flex align-items-center">
-
             <li class="nav-item d-block d-lg-none">
                 <a class="nav-link nav-icon search-bar-toggle " href="#">
                     <i class="bi bi-search"></i>
@@ -165,61 +164,61 @@
 
             </li><!-- End Messages Nav -->
 
-            <li class="nav-item dropdown pe-3">
+            <!--            <li class="nav-item dropdown pe-3">-->
 
-                <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
-                    <img src="assets/img/profile-img.jpg" alt="Profile" class="rounded-circle">
-                    <span class="d-none d-md-block dropdown-toggle ps-2">K. Anderson</span>
-                </a><!-- End Profile Iamge Icon -->
+            <!--                <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">-->
+            <!--                    <img src="assets/img/profile-img.jpg" alt="Profile" class="rounded-circle">-->
+            <!--                    <span class="d-none d-md-block dropdown-toggle ps-2">K. Anderson</span>-->
+            <!--                </a>&lt;!&ndash; End Profile Iamge Icon &ndash;&gt;-->
 
-                <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
-                    <li class="dropdown-header">
-                        <h6>Kevin Anderson</h6>
-                        <span>Web Designer</span>
-                    </li>
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
+            <!--                <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">-->
+            <!--                    <li class="dropdown-header">-->
+            <!--                        <h6>Kevin Anderson</h6>-->
+            <!--                        <span>Web Designer</span>-->
+            <!--                    </li>-->
+            <!--                    <li>-->
+            <!--                        <hr class="dropdown-divider">-->
+            <!--                    </li>-->
 
-                    <li>
-                        <a class="dropdown-item d-flex align-items-center" href="users-profile.html">
-                            <i class="bi bi-person"></i>
-                            <span>My Profile</span>
-                        </a>
-                    </li>
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
+            <!--                    <li>-->
+            <!--                        <a class="dropdown-item d-flex align-items-center" href="users-profile.html">-->
+            <!--                            <i class="bi bi-person"></i>-->
+            <!--                            <span>My Profile</span>-->
+            <!--                        </a>-->
+            <!--                    </li>-->
+            <!--                    <li>-->
+            <!--                        <hr class="dropdown-divider">-->
+            <!--                    </li>-->
 
-                    <li>
-                        <a class="dropdown-item d-flex align-items-center" href="users-profile.html">
-                            <i class="bi bi-gear"></i>
-                            <span>Account Settings</span>
-                        </a>
-                    </li>
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
+            <!--                    <li>-->
+            <!--                        <a class="dropdown-item d-flex align-items-center" href="users-profile.html">-->
+            <!--                            <i class="bi bi-gear"></i>-->
+            <!--                            <span>Account Settings</span>-->
+            <!--                        </a>-->
+            <!--                    </li>-->
+            <!--                    <li>-->
+            <!--                        <hr class="dropdown-divider">-->
+            <!--                    </li>-->
 
-                    <li>
-                        <a class="dropdown-item d-flex align-items-center" href="pages-faq.html">
-                            <i class="bi bi-question-circle"></i>
-                            <span>Need Help?</span>
-                        </a>
-                    </li>
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
+            <!--                    <li>-->
+            <!--                        <a class="dropdown-item d-flex align-items-center" href="pages-faq.html">-->
+            <!--                            <i class="bi bi-question-circle"></i>-->
+            <!--                            <span>Need Help?</span>-->
+            <!--                        </a>-->
+            <!--                    </li>-->
+            <!--                    <li>-->
+            <!--                        <hr class="dropdown-divider">-->
+            <!--                    </li>-->
 
-                    <li>
-                        <a class="dropdown-item d-flex align-items-center" href="#">
-                            <i class="bi bi-box-arrow-right"></i>
-                            <span>Sign Out</span>
-                        </a>
-                    </li>
+            <!--                    <li>-->
+            <!--                        <a class="dropdown-item d-flex align-items-center" href="#">-->
+            <!--                            <i class="bi bi-box-arrow-right"></i>-->
+            <!--                            <span>Sign Out</span>-->
+            <!--                        </a>-->
+            <!--                    </li>-->
 
-                </ul><!-- End Profile Dropdown Items -->
-            </li><!-- End Profile Nav -->
+            <!--                </ul>&lt;!&ndash; End Profile Dropdown Items &ndash;&gt;-->
+            <!--            </li>&lt;!&ndash; End Profile Nav &ndash;&gt;-->
 
         </ul>
     </nav><!-- End Icons Navigation -->
@@ -266,7 +265,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="forms-layouts.html">
+                    <a href="/adddoctor">
                         <i class="bi bi-circle"></i><span>Thêm bác sĩ</span>
                     </a>
                 </li>
@@ -307,12 +306,11 @@
 </aside>
 <main id="main" class="main">
     <div class="pagetitle">
-        <h1>Form Layouts</h1>
+        <h1>Thêm bệnh nhân</h1>
         <nav>
             <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                <li class="breadcrumb-item">Forms</li>
-                <li class="breadcrumb-item active">Layouts</li>
+                <li class="breadcrumb-item"><a href="/dashboard">Dashboard</a></li>
+                <li class="breadcrumb-item active">Thêm bệnh nhân</li>
             </ol>
         </nav>
     </div><!-- End Page Title -->
@@ -337,19 +335,19 @@
                     </div>
                     <div class="col-12">
                         <label for="inputAddress" class="form-label">Tuổi</label>
-                        <input type="text" min="1" max="120"  name="age" class="form-control" id="inputAddress" placeholder="1234 Main St">
+                        <input type="text" min="1" max="120"  name="age" class="form-control" id="inputAddress" placeholder="18">
                     </div>
                     <div class="col-12">
                         <label for="inputAddress" class="form-label">Họ Và Tên</label>
-                        <input type="text" name="name" class="form-control" id="inputAddress" placeholder="1234 Main St">
+                        <input type="text" name="name" class="form-control" id="inputAddress" placeholder="Nguyen Van A">
                     </div>
                     <div class="col-12">
                         <label for="inputAddress" class="form-label">Số Điện Thoại</label>
-                        <input type="number" name="phone" class="form-control" id="inputAddress" placeholder="1234 Main St">
+                        <input type="number" name="phone" class="form-control" id="inputAddress" placeholder="03456789900">
                     </div>
                     <div class="col-12">
                         <label for="inputAddress" class="form-label">Ngày Sinh</label>
-                        <input type="date"name="birth_day" class="form-control" id="inputAddress" placeholder="1234 Main St">
+                        <input type="date"name="birth_day" class="form-control" id="inputAddress" placeholder="01/01/2021">
                     </div>
                     <div class="col-2">
                                                         <label class="label">Giới Tính</label>
@@ -368,14 +366,14 @@
                                                     </div>
                     <div class="col-12">
                         <label for="inputAddress" class="form-label">Phòng</label>
-                        <input type="text"name="number_room" class="form-control" id="inputAddress" placeholder="1234 Main St">
+                        <input type="text"name="number_room" class="form-control" id="inputAddress" placeholder="Phòng 01">
                     </div>
                     <div class="col-12">
-                        <label for="inputAddress" class="form-label">key device</label>
-                        <input type="text"name="key_device"class="form-control" id="inputAddress" placeholder="1234 Main St">
+                        <label for="inputAddress" class="form-label">Key device</label>
+                        <input type="text"name="key_device"class="form-control" id="inputAddress" placeholder="device02">
                     </div>
                     <div class="text-center">
-                        <button type="submit" class="btn btn-primary">Submit</button>
+                        <button type="submit" class="btn btn-primary">Thêm</button>
                         <button type="reset" class="btn btn-secondary">Reset</button>
                     </div>
                 </form><!-- Vertical Form -->
