--- a/views/add_doctor.hbs
+++ b/views/add_doctor.hbs
@@ -1,4 +1,3 @@
-
 <header id="header" class="header fixed-top d-flex align-items-center">
 
     <div class="d-flex align-items-center justify-content-between">
@@ -165,68 +164,11 @@
 
             </li><!-- End Messages Nav -->
 
-            <!--            <li class="nav-item dropdown pe-3">-->
-
-            <!--                <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">-->
-            <!--                    <img src="assets/img/profile-img.jpg" alt="Profile" class="rounded-circle">-->
-            <!--                    <span class="d-none d-md-block dropdown-toggle ps-2">K. Anderson</span>-->
-            <!--                </a>&lt;!&ndash; End Profile Iamge Icon &ndash;&gt;-->
-
-            <!--                <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">-->
-            <!--                    <li class="dropdown-header">-->
-            <!--                        <h6>Kevin Anderson</h6>-->
-            <!--                        <span>Web Designer</span>-->
-            <!--                    </li>-->
-            <!--                    <li>-->
-            <!--                        <hr class="dropdown-divider">-->
-            <!--                    </li>-->
-
-            <!--                    <li>-->
-            <!--                        <a class="dropdown-item d-flex align-items-center" href="users-profile.html">-->
-            <!--                            <i class="bi bi-person"></i>-->
-            <!--                            <span>My Profile</span>-->
-            <!--                        </a>-->
-            <!--                    </li>-->
-            <!--                    <li>-->
-            <!--                        <hr class="dropdown-divider">-->
-            <!--                    </li>-->
-
-            <!--                    <li>-->
-            <!--                        <a class="dropdown-item d-flex align-items-center" href="users-profile.html">-->
-            <!--                            <i class="bi bi-gear"></i>-->
-            <!--                            <span>Account Settings</span>-->
-            <!--                        </a>-->
-            <!--                    </li>-->
-            <!--                    <li>-->
-            <!--                        <hr class="dropdown-divider">-->
-            <!--                    </li>-->
-
-            <!--                    <li>-->
-            <!--                        <a class="dropdown-item d-flex align-items-center" href="pages-faq.html">-->
-            <!--                            <i class="bi bi-question-circle"></i>-->
-            <!--                            <span>Need Help?</span>-->
-            <!--                        </a>-->
-            <!--                    </li>-->
-            <!--                    <li>-->
-            <!--                        <hr class="dropdown-divider">-->
-            <!--                    </li>-->
-
-            <!--                    <li>-->
-            <!--                        <a class="dropdown-item d-flex align-items-center" href="#">-->
-            <!--                            <i class="bi bi-box-arrow-right"></i>-->
-            <!--                            <span>Sign Out</span>-->
-            <!--                        </a>-->
-            <!--                    </li>-->
-
-            <!--                </ul>&lt;!&ndash; End Profile Dropdown Items &ndash;&gt;-->
-            <!--            </li>&lt;!&ndash; End Profile Nav &ndash;&gt;-->
 
         </ul>
     </nav><!-- End Icons Navigation -->
 
 </header><!-- End Header -->
-
-<!-- ======= Sidebar ======= -->
 <aside id="sidebar" class="sidebar">
 
     <ul class="sidebar-nav" id="sidebar-nav">
@@ -268,7 +210,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="/adddoctor">
+                    <a href="forms-layouts.html">
                         <i class="bi bi-circle"></i><span>Thêm bác sĩ</span>
                     </a>
                 </li>
@@ -307,60 +249,58 @@
     </ul>
 
 </aside>
-
 <main id="main" class="main">
-
     <div class="pagetitle">
-        <h1>Danh sách bác sĩ</h1>
+        <h1>Thêm bác sĩ</h1>
         <nav>
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="/dashboard">Dashboard</a></li>
-                <li class="breadcrumb-item">Danh sách bác sĩ</li>
+                <li class="breadcrumb-item active">Thêm bác sĩ</li>
             </ol>
         </nav>
     </div><!-- End Page Title -->
-
     <section class="section">
-        <div class="row">
-            <div class="col-lg-12">
-
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">Datatables</h5>
-
-
-                        <!-- Table with stripped rows -->
-                        <table class="table datatable">
-                            <thead>
-                            <tr>
-                                <th scope="col">#</th>
-                                <th scope="col">ID</th>
-                                <th scope="col">Họ Và Tên</th>
-                                <th scope="col">UserName</th>
-                                <th scope="col">PassWord</th>
-                                <th scope="col">Trạng Thái</th>
-                            </tr>
-                            </thead>
-{{#each docs}}
-                            <tbody>
-                            <tr>
-                                <th scope="row">1</th>
-                                <td>{{this.id}}</td>
-                                <td>{{this.name}}</td>
-                                <td>{{this.username}}</td>
-                                <td>{{this.password}}</td>
-                                {{#if this.state}}-->
-                                                                                <td><a href="#" class="btn btn-success">{{this.state}}</a></td>
-                                                                                {{else}}
-                                                                                    <td><a href="#" class="btn btn-danger">{{this.state}}</a></td>{{/if}}
-                            </tr>
-                            </tbody>
-{{/each}}
-                        </table>
-                        <!-- End Table with stripped rows -->
-
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">Thêm bác sĩ</h5>
+                <!-- Vertical Form -->
+                <form class="row g-3" action="/adddoctor" id="application-form" method="post">
+                    <div class="col-12">
+                        <label for="inputNanme4" class="form-label">Username</label>
+                        <input type="text" name="username" class="form-control" id="inputNanme4">
                     </div>
-                </div>
+                    <div class="col-12">
+                        <label for="inputEmail4" class="form-label">Password</label>
+                        <input type="password" name="password" class="form-control" id="inputEmail4">
+                    </div>
+                    <div class="col-12">
+                        <label for="inputPassword4" class="form-label">ID</label>
+                        <input type="number" name="id" class="form-control" id="inputPassword4">
+                    </div>
+                    <div class="col-12">
+                        <label for="inputAddress" class="form-label">Họ Và Tên</label>
+                        <input type="text" name="name" class="form-control" id="inputAddress" placeholder="Nguyen Van A">
+                    </div>
+                    <div class="col-2">
+                        <label class="label">Giới Tính</label>
+                        <div class="input-group">
+                            <div class="p-t-10">
+                                <label class="radio-container m-r-45">Male
+                                    <input type="radio" checked="checked" value="Nam" name="gender">
+                                    <span class="checkmark"></span>
+                                </label>
+                                <label class="radio-container">Female
+                                    <input type="radio" value="Nữ" name="gender">
+                                    <span class="checkmark"></span>
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="text-center">
+                        <button type="submit" class="btn btn-primary">Thêm</button>
+                        <button type="reset" class="btn btn-secondary">Reset</button>
+                    </div>
+                </form><!-- Vertical Form -->
 
             </div>
         </div>
@@ -369,17 +309,3 @@
 </main><!-- End #main -->
 
 <!-- ======= Footer ======= -->
-<footer id="footer" class="footer">
-    <div class="copyright">
-        &copy; Copyright <strong><span>NiceAdmin</span></strong>. All Rights Reserved
-    </div>
-    <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/nice-admin-bootstrap-admin-html-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-    </div>
-</footer><!-- End Footer -->
-
-<a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
