--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -4,21 +4,20 @@
     <div class="d-flex align-items-center justify-content-between">
         <a href="index.html" class="logo d-flex align-items-center">
             <img src="assets/img/logo.png" alt="">
-            <span class="d-none d-lg-block">NiceAdmin</span>
+            <span class="d-none d-lg-block">Hệ thống quản trị</span>
         </a>
         <i class="bi bi-list toggle-sidebar-btn"></i>
     </div><!-- End Logo -->
 
     <div class="search-bar">
-        <form class="search-form d-flex align-items-center" method="POST" action="#">
-            <input type="text" name="query" placeholder="Search" title="Enter search keyword">
+        <form class="search-form d-flex align-items-center" method="POST" action="/dashboard">
+            <input type="text" name="query" placeholder="Tìm kiếm" title="Enter search keyword">
             <button type="submit" title="Search"><i class="bi bi-search"></i></button>
         </form>
     </div><!-- End Search Bar -->
 
     <nav class="header-nav ms-auto">
         <ul class="d-flex align-items-center">
-
             <li class="nav-item d-block d-lg-none">
                 <a class="nav-link nav-icon search-bar-toggle " href="#">
                     <i class="bi bi-search"></i>
@@ -166,61 +165,61 @@
 
             </li><!-- End Messages Nav -->
 
-            <li class="nav-item dropdown pe-3">
+<!--            <li class="nav-item dropdown pe-3">-->
 
-                <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
-                    <img src="assets/img/profile-img.jpg" alt="Profile" class="rounded-circle">
-                    <span class="d-none d-md-block dropdown-toggle ps-2">K. Anderson</span>
-                </a><!-- End Profile Iamge Icon -->
+<!--                <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">-->
+<!--                    <img src="assets/img/profile-img.jpg" alt="Profile" class="rounded-circle">-->
+<!--                    <span class="d-none d-md-block dropdown-toggle ps-2">K. Anderson</span>-->
+<!--                </a>&lt;!&ndash; End Profile Iamge Icon &ndash;&gt;-->
 
-                <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
-                    <li class="dropdown-header">
-                        <h6>Kevin Anderson</h6>
-                        <span>Web Designer</span>
-                    </li>
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
+<!--                <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">-->
+<!--                    <li class="dropdown-header">-->
+<!--                        <h6>Kevin Anderson</h6>-->
+<!--                        <span>Web Designer</span>-->
+<!--                    </li>-->
+<!--                    <li>-->
+<!--                        <hr class="dropdown-divider">-->
+<!--                    </li>-->
 
-                    <li>
-                        <a class="dropdown-item d-flex align-items-center" href="users-profile.html">
-                            <i class="bi bi-person"></i>
-                            <span>My Profile</span>
-                        </a>
-                    </li>
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
+<!--                    <li>-->
+<!--                        <a class="dropdown-item d-flex align-items-center" href="users-profile.html">-->
+<!--                            <i class="bi bi-person"></i>-->
+<!--                            <span>My Profile</span>-->
+<!--                        </a>-->
+<!--                    </li>-->
+<!--                    <li>-->
+<!--                        <hr class="dropdown-divider">-->
+<!--                    </li>-->
 
-                    <li>
-                        <a class="dropdown-item d-flex align-items-center" href="users-profile.html">
-                            <i class="bi bi-gear"></i>
-                            <span>Account Settings</span>
-                        </a>
-                    </li>
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
+<!--                    <li>-->
+<!--                        <a class="dropdown-item d-flex align-items-center" href="users-profile.html">-->
+<!--                            <i class="bi bi-gear"></i>-->
+<!--                            <span>Account Settings</span>-->
+<!--                        </a>-->
+<!--                    </li>-->
+<!--                    <li>-->
+<!--                        <hr class="dropdown-divider">-->
+<!--                    </li>-->
 
-                    <li>
-                        <a class="dropdown-item d-flex align-items-center" href="pages-faq.html">
-                            <i class="bi bi-question-circle"></i>
-                            <span>Need Help?</span>
-                        </a>
-                    </li>
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
+<!--                    <li>-->
+<!--                        <a class="dropdown-item d-flex align-items-center" href="pages-faq.html">-->
+<!--                            <i class="bi bi-question-circle"></i>-->
+<!--                            <span>Need Help?</span>-->
+<!--                        </a>-->
+<!--                    </li>-->
+<!--                    <li>-->
+<!--                        <hr class="dropdown-divider">-->
+<!--                    </li>-->
 
-                    <li>
-                        <a class="dropdown-item d-flex align-items-center" href="#">
-                            <i class="bi bi-box-arrow-right"></i>
-                            <span>Sign Out</span>
-                        </a>
-                    </li>
+<!--                    <li>-->
+<!--                        <a class="dropdown-item d-flex align-items-center" href="#">-->
+<!--                            <i class="bi bi-box-arrow-right"></i>-->
+<!--                            <span>Sign Out</span>-->
+<!--                        </a>-->
+<!--                    </li>-->
 
-                </ul><!-- End Profile Dropdown Items -->
-            </li><!-- End Profile Nav -->
+<!--                </ul>&lt;!&ndash; End Profile Dropdown Items &ndash;&gt;-->
+<!--            </li>&lt;!&ndash; End Profile Nav &ndash;&gt;-->
 
         </ul>
     </nav><!-- End Icons Navigation -->
@@ -270,7 +269,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="forms-layouts.html">
+                    <a href="/adddoctor">
                         <i class="bi bi-circle"></i><span>Thêm bác sĩ</span>
                     </a>
                 </li>
@@ -315,7 +314,7 @@
         <h1>Dashboard</h1>
         <nav>
             <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                <li class="breadcrumb-item"><a href="/dashboard">Home</a></li>
                 <li class="breadcrumb-item active">Dashboard</li>
             </ol>
         </nav>
@@ -346,7 +345,7 @@
                             </div>
 
                             <div class="card-body">
-                                <h5 class="card-title">Tổng Số Bệnh Nhân <span>| Today</span></h5>
+                                <h5 class="card-title">Tổng Số Bệnh Nhân <span>| Bệnh Viện 1</span></h5>
 
                                 <div class="d-flex align-items-center">
                                     <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
@@ -381,7 +380,7 @@
                             </div>
 
                             <div class="card-body">
-                                <h5 class="card-title">Số bệnh nhân đã khỏi <span>| This Month</span></h5>
+                                <h5 class="card-title">Số bệnh nhân đã khỏi <span>| Bệnh Viện 1 </span></h5>
 
                                 <div class="d-flex align-items-center">
                                     <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
@@ -417,7 +416,7 @@
                             </div>
 
                             <div class="card-body">
-                                <h5 class="card-title">Số bệnh nhân tử vong<span>| This Year</span></h5>
+                                <h5 class="card-title">Số bệnh nhân tử vong<span>| Bệnh Viện 1</span></h5>
 
                                 <div class="d-flex align-items-center">
                                     <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
@@ -510,7 +509,7 @@
                             </div>
 
                             <div class="card-body">
-                                <h5 class="card-title">Danh sách bác sĩ <span>| Today</span></h5>
+                                <h5 class="card-title">Danh sách bác sĩ <span>| Bệnh viện 1</span></h5>
 
                                 <table class="table table-borderless datatable">
                                     <thead>
@@ -656,7 +655,7 @@
                                         <img src="img/slides-1.jpg" class="d-block w-100" alt="...">
                                         <div class="carousel-caption d-none d-md-block">
                                             <h5>Thông điệp 5K</h5>
-                                            <p>Some representative placeholder content for the first slide.</p>
+                                            <p>Để chủ động phòng, chống dịch COVID-19 trong trạng thái “bình thường mới....</p>
                                         </div>
                                     </div>
                                     <div class="carousel-item">
@@ -669,8 +668,7 @@
                                     <div class="carousel-item">
                                         <img src="img/slides-3.jpg" class="d-block w-100" alt="...">
                                         <div class="carousel-caption d-none d-md-block">
-                                            <h5>Third slide label</h5>
-                                            <p>Some representative placeholder content for the third slide.</p>
+                                            <h5>Nhưng thành viên tuyến đâuù chống dịch</h5>
                                         </div>
                                     </div>
                                 </div>
@@ -816,20 +814,20 @@
                             <div class="post-item clearfix">
                                 <img src="img/news-3.jpg" alt="">
                                 <h4><a href="https://covid19.gov.vn/">Trang thông tin về tình hình dịch bệnh Covit</a></h4>
-                                <p>Fugiat voluptas vero eaque accusantium eos. Consequuntur sed ipsam et totam...</p>
+                                <p>Trang thông tịn của bộ y tế về tình hình dịch bệnh cả nước...</p>
                             </div>
 
                             <div class="post-item clearfix">
                                 <img src="img/news-4.jpg" alt="">
                                 <h4><a href="https://covid19.gov.vn/cuc-quan-ly-duoc-2-cong-ty-duoc-nuoc-ngoai-dong-y-nhuong-quyen-san-xuat-thuoc-dieu-tri-covid-19-171211126150525751.htm">Cục Quản lý Dược: 2 công ty dược nước ngoài đồng ý nhượng quyền sản xuất thuốc điều trị COVID-19</a></h4>
-                                <p>Qui enim quia optio. Eligendi aut asperiores enim repellendusvel rerum cuder...</p>
+                                <p>Cục Quản lý Dược: 2 công ty dược nước ngoài đồng ý nhượng quyền sản xuất thuốc điều trị COVID-19...</p>
                             </div>
 
                             <div class="post-item clearfix">
                                 <img src="img/news-5.jpg" alt="">
                                 <h4><a href="https://covid19.gov.vn/bo-y-te-lap-3-doan-kiem-tra-viec-thu-dung-dieu-tri-thich-ung-an-toan-linh-hoat-kiem-soat-dich-covid-19-171211125180436753.htm">
                                     Bộ Y tế lập 3 đoàn kiểm tra việc thu dung, điều trị, thích ứng an toàn, linh hoạt, kiểm soát dịch COVID-19</a></h4>
-                                <p>Odit ut eveniet modi reiciendis. Atque cupiditate libero beatae dignissimos eius...</p>
+                                <p>Bộ Y tế lập 3 đoàn kiểm tra việc thu dung, điều trị, thích ứng an toàn, linh hoạt, kiểm soát dịch COVID-19...</p>
                             </div>
 
                         </div><!-- End sidebar recent posts-->
@@ -847,14 +845,14 @@
 <!-- ======= Footer ======= -->
 <footer id="footer" class="footer">
     <div class="copyright">
-        &copy; Copyright <strong><span>NiceAdmin</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>Hệ thống quản trị<</span></strong>. All Rights Reserved
     </div>
     <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/nice-admin-bootstrap-admin-html-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        Designed by <a href="https://bootstrapmade.com/">Du An Tot Nghiep</a>
     </div>
 </footer><!-- End Footer -->
 
