--- a/views/notification.hbs
+++ b/views/notification.hbs
@@ -1688,6 +1688,10 @@
                         <input type="text" class="form-control" id="inputAddress"  name="age" value="{{this.age}}" readonly>
                     </div>
                     <div class="col-12">
+                        <label for="inputAddress" class="form-label">Key Deive</label>
+                        <input type="text" class="form-control" id="inputAddress"  name="key_device" value="{{this.key_device}}" readonly>
+                    </div>
+                    <div class="col-12">
                         <label for="inputAddress" class="form-label">Hội chuẩn </label>
                         <input type="text" class="form-control" id="inputAddress"  name="status"  >
                     </div>
