--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -635,6 +635,99 @@
             </div>
         </div>
     </section>
+<!--    report-->
+    <div class="col-12">
+        <div class="card">
+
+            <div class="filter">
+                <a class="icon" href="#" data-bs-toggle="dropdown"><i class="bi bi-three-dots"></i></a>
+                <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
+                    <li class="dropdown-header text-start">
+                        <h6>Filter</h6>
+                    </li>
+
+                    <li><a class="dropdown-item" href="#">Today</a></li>
+                    <li><a class="dropdown-item" href="#">This Month</a></li>
+                    <li><a class="dropdown-item" href="#">This Year</a></li>
+                </ul>
+            </div>
+
+            <div class="card-body">
+                <h5 class="card-title">Biểu đồ thống kê <span>/Today</span></h5>
+
+                <!-- Line Chart -->
+                <div id="reportsChart"></div>
+
+                <script>
+                    var heart = [];
+                    var sp02 = [];
+                    var temp = [];
+                    var date = [];
+                        {{#each device}}
+                            {{#each this.heart}}
+                            heart.push({{this.value}});
+                            date.push({{moment real_time format="YYYY-MM-DD"}})
+                            {{/each}}
+                            {{#each this.spO2}}
+                            sp02.push({{this.value}});
+                            {{/each}}
+                            {{#each this.temp}}
+                            temp.push({{this.value}});
+                            {{/each}}
+                        {{/each}}
+                    document.addEventListener("DOMContentLoaded", () => {
+                        new ApexCharts(document.querySelector("#reportsChart"), {
+                            series: [{
+                                name: 'Nhịp tim',
+                                data: heart,
+                            }, {
+                                name: 'SP02',
+                                data: sp02
+                            }, {
+                                name: 'Nhiệt độ',
+                                data: temp
+                            }],
+                            chart: {
+                                height: 350,
+                                type: 'area',
+                                toolbar: {
+                                    show: true
+                                },
+                            },
+                            markers: {
+                                size: 4
+                            },
+                            colors: ['#4154f1', '#2eca6a', '#ff771d'],
+                            fill: {
+                                type: "gradient",
+                                gradient: {
+                                    shadeIntensity: 1,
+                                    opacityFrom: 0.3,
+                                    opacityTo: 0.4,
+                                    stops: [0, 90, 100]
+                                }
+                            },
+                            dataLabels: {
+                                enabled: true
+                            },
+                            stroke: {
+                                curve: 'smooth',
+                                width: 2
+                            },
+                            xaxis: {
+                                type: 'text',
+                                categories: date
+                            },
+
+                        }).render();
+                    });
+                </script>
+                <!-- End Line Chart -->
+
+            </div>
+
+        </div>
+    </div><!-- End Reports -->
 
 </main><!-- End #main -->
 
