--- a/views/listPatients.hbs
+++ b/views/listPatients.hbs
@@ -325,7 +325,6 @@
     <section class="section">
         <div class="row">
             <div class="col-lg-12">
-
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Danh sách bệnh nhân</h5>
@@ -342,27 +341,51 @@
                             </tr>
                             </thead>
 {{#each docs}}
-                            <tbody>
-                            <tr>
+                            <tbody >
+                            <tr id="centerbox1">
                                 <th scope="row"><a href="#">#</a></th>
                                 <td>{{this.id}}</td>
                                 <td>{{this.name}}</td>
                                 <td>{{this.phone}}</td>
                                 <td>{{this.number_room}}</td>
+
                                 <td>
                                         <div class="card-body">
 
-                                            <a type="button" href="/{{this._id}}" class="btn btn-secondary"><i class="bi bi-collection"></i></a>
+                                            <a type="button" href="/{{this._id}}" class="btn btn-secondary">Chi Tiết <i class="bi bi-collection"></i></a>
 
-                                            <a type="button" href="/delete/{{this._id}}" class="btn btn-danger"><i class="bi bi-exclamation-octagon"></i></a>
+                                            <a type="button" href="/delete/{{this._id}}" class="btn btn-danger">Xóa <i class="bi bi-exclamation-octagon"></i></a>
 
-                                            <a type="button" href="/list-patients/update/{{this._id}}" class="btn btn-info"><i class="bi bi-info-circle"></i></a>
+<!--                                            <a type="button" href="/list-patients/update/{{this._id}}" class="btn btn-info"><i class="bi bi-info-circle"></i></a>-->
 
                                         </div>
 
                                 </td>
                             </tr>
                             </tbody>
+
+<!--        <script>-->
+<!--            (function () {-->
+<!--                        var state;-->
+<!--                        state={{this.state}};-->
+<!--                        console.log(state)-->
+
+<!--                        if (state == 2) {-->
+<!--                            document.getElementById("centerbox1").style.backgroundColor = '#99C262';-->
+<!--                        }-->
+<!--                        else if (state == 1)-->
+<!--                        {-->
+<!--                            document.getElementById("centerbox1").style.backgroundColor = '#F8D347';-->
+<!--                        }-->
+<!--                       else if (state == 0)-->
+<!--                        {-->
+<!--                            document.getElementById("centerbox1").style.backgroundColor = '#FF6C60';-->
+<!--                        }-->
+
+<!--                    }-->
+<!--            )();-->
+<!--        </script>-->
+
 {{/each}}
                         </table>
                         <!-- End Table with stripped rows -->
@@ -391,4 +414,3 @@
 </footer><!-- End Footer -->
 
 <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
-
