--- a/views/addPatient.hbs
+++ b/views/addPatient.hbs
@@ -335,7 +335,7 @@
                     </div>
                     <div class="col-12">
                         <label for="inputAddress" class="form-label">Tuổi</label>
-                        <input type="text" min="1" max="120"  name="age" class="form-control" id="inputAddress" placeholder="18">
+                        <input type="number" min="1" max="120"  name="age" class="form-control" id="inputAddress" placeholder="18">
                     </div>
                     <div class="col-12">
                         <label for="inputAddress" class="form-label">Họ Và Tên</label>
