--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -287,7 +287,7 @@
 
 
         <li class="nav-item">
-            <a class="nav-link collapsed" href="/">
+            <a class="nav-link collapsed" href="/404">
                 <i class="bi bi-question-circle"></i>
                 <span>F.A.Q</span>
             </a>
@@ -845,14 +845,14 @@
 <!-- ======= Footer ======= -->
 <footer id="footer" class="footer">
     <div class="copyright">
-        &copy; Copyright <strong><span>Hệ thống quản trị<</span></strong>. All Rights Reserved
+    &copy; Copyright <strong><span>Quản lý bệnh nhân</span></strong>. All Rights Reserved
     </div>
     <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/nice-admin-bootstrap-admin-html-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">Du An Tot Nghiep</a>
+        Designed by <a href="https://www.facebook.com/HiIamDuc07/">Du An Tot Nghiep</a>
     </div>
 </footer><!-- End Footer -->
 
